unpackaged/main/default/objects/Volunteer_Job__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Volunteer Jobs</relationshipLabel>
    <relationshipName>Volunteer_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>