unpackaged/main/default/objects/Volunteer_Job__c/fields/Filled_Position__c.field-meta.xml
<CustomField>
    <fullName>Filled_Position__c</fullName>
    <label>Filled Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>