unpackaged/main/default/objects/Volunteer_Job__c/fields/Number_of_Postion__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Postion__c</fullName>
    <label>Number of Postion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>