unpackaged/main/default/objects/Volunteer_Job__c/fields/Open_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Open_Jobs__c</fullName>
    <formula>Number_of_Postion__c - Filled_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>